# tunaDish

./: .gitignore  .gitmodules  CLAUDE.md  README.md  package.json
client/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
client/e2e/: app.spec.ts  fixtures.ts  mock-ws-server.ts
client/e2e/tauri-shims/: api-core.ts  api-window.ts  plugin-sql.ts
client/src/: App.css  App.tsx  index.css  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
docs/: briefing.md  development_plan.md  handoff.md  mobile-ui-spec.md  rawq_integration.md  sprint0_completion.md  sprint1_completion.md  sprint2_completion.md  sprint3_completion.md  test-plan.md
docs/archive/: google_stitch_prompt.md  sprint4_5_completion.md  sprint6_hotfix.md
docs/explanation/: per-message-model.md
docs/plans/: client-only-migration.md  development_plan.md  feature-ideas.md  refactoring-plan.md  session-persona-todo.md
docs/prompts/: branch-and-rt-implementation.md  branch-view-and-adopt-summary.md  tunadish-branch-transport.md  tunapi-branch-rt-schema.md  tunapi_project_details_api.md
docs/reference/: handoff.md  prd.md
scripts/: build-rawq.sh  update-rawq.sh
transport/: README.md  pyproject.toml
transport/src/tunadish_transport/: __init__.py  backend.py  commands.py  context_store.py  presenter.py  transport.py
transport/tests/: conftest.py  test_commands.py  test_context_store.py  test_presenter.py  test_transport.py
(+83 files in other folders)
